# xapres

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  text.md  ~$verage.xml
.github/workflows/: deploy.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release.yaml  test.yaml
ci/: environment-py3.10.yml  environment-py3.11.yml  environment-py3.12.yml  environment-py3.13.yml  environment-py3.7.yml  environment-py3.8.yml  environment-py3.9.yml
docs/: Makefile  Untitled.ipynb  _config.yml  _toc.yml  api.rst  conf.py  environment.yml  index.rst  requirements.txt
docs/apidocs/: index.rst
docs/apidocs/xapres/: xapres.ApRES_plot.md  xapres.load.md  xapres.md  xapres.utils.md
docs/src/: api.md  background.ipynb  displacement.ipynb  getting_started.ipynb  how_to_intro.md  intro.ipynb  intro.md  list_files.ipynb  loading.ipynb  plotting.ipynb  profiles.ipynb  sonify.ipynb  stacking.ipynb  xarray_grid_search.py  zarr.ipynb
docs/src/data/temp_zarr/multi-burst.zarr/: .zattrs  (+1 more)
docs/src/images/: ApRES_ARCO_figs.pptx  logo.pptx
html/xapres/: ApRES_plot.html  index.html  load.html  utils.html
notebooks/append/: README.md  notesForOfficeHours.ipynb
notebooks/guides/: README.md  Untitled.ipynb  bug_testing.ipynb  coherence_range.ipynb  fine_range.ipynb  sonify.ipynb  usingFile_Burst_chirp_Objects.ipynb  usingXApRES.html  usingXApRES.ipynb
notebooks/guides/short_apres_time_series.zarr/: .zmetadata
notebooks/guides/short_apres_time_series.zarr/AFGain/: 0
notebooks/guides/short_apres_time_series.zarr/battery_voltage/: .zattrs  0
notebooks/guides/short_apres_time_series.zarr/burst_number/: .zarray
notebooks/guides/short_apres_time_series.zarr/chirp/: .zarray  .zattrs
notebooks/guides/short_apres_time_series.zarr/chirp_time/: 0  1
notebooks/guides/short_apres_time_series.zarr/filename/: .zarray  1
notebooks/guides/short_apres_time_series.zarr/latitude/: .zarray  .zattrs  0
notebooks/guides/short_apres_time_series.zarr/longitude/: .zattrs  0
notebooks/guides/short_apres_time_series.zarr/profile/: .zarray  .zattrs
notebooks/guides/short_apres_time_series.zarr/profile_range/: .zarray  .zattrs  0
notebooks/guides/short_apres_time_series.zarr/profile_stacked/: .zarray  .zattrs  0.0.0
notebooks/guides/short_apres_time_series.zarr/temperature_1/: .zattrs  0
notebooks/guides/short_apres_time_series.zarr/temperature_2/: .zattrs  0
notebooks/guides/short_apres_time_series.zarr/time/: .zarray  .zattrs  0
notebooks/loading_files/: README.md  googleBuckFromNB.ipynb  load_dats_from_bucket.ipynb
notebooks/new_initalization_notes/: Untitled.ipynb  new_implementation.ipynb
notebooks/test_notes/: G1_ts_fine_TT.mat  README.md  Untitled.ipynb  assignment.py  auto_gs_load.ipynb  bas_apres.ipynb  breaking_down_vels.ipynb  buff_size.ipynb  bug_testing.ipynb  calculating_velocities.ipynb  clipping_check.ipynb  constants.ipynb  custom_fft.ipynb  custom_fft_implemention_testing.ipynb  data_explore.ipynb  debug_filename.ipynb  disp2ezz.ipynb  flask_data_bug.ipynb  header_attrs_bug.ipynb  mar30_notes.ipynb  orientation_test.ipynb  processing_steps.ipynb  profile_sensitivity.ipynb  profiles_plotting.ipynb  ronne_test.ipynb  site.mat  strain_rate_fit_uncertainties.ipynb  strain_rate_steps_new.ipynb  temperature_correction.ipynb  test_file_selection.ipynb  testing_xapres.ipynb  tests_for_github.ipynb  unattended_testing.ipynb  usingXApRES_velocities.ipynb  vels_compare.ipynb  vels_sanity_test.ipynb  vels_test.ipynb  window_sensitivity.ipynb  xapres_fmwc_comparison copy.ipynb  xapres_fmwc_comparison.ipynb  (+1 more)
notebooks/test_notes/append/: append_notes.ipynb  appendingtests.ipynb  appendingtests_newToyModel.ipynb  zarr_append_not_working.ipynb
notebooks/tests/: test_file_selection.ipynb  testing_xapres.ipynb
notebooks/to_zarr/: README.md  all_to_zarr.ipynb  dat_to_zarr.ipynb  to_individual_zarr.ipynb  to_individual_zarr_notes.ipynb  write_big_zarrs-notes.ipynb  write_big_zarrs.ipynb
scripts/: fpp_test.m  load_one_chirp_fmcw.m  unattended_test_1
site/: index.html  load.html  utils.html
temp/: pyproject.toml  setup.py
tests/: __init__.py  test_all.py  test_bound_methds_added.py  test_dat_file_loading.py  test_displacement_calculation.py  test_dummy.py  test_file_loading.py  test_file_search_methods.py  test_file_selection_methods.py  test_polarmetric_load.py  test_wrappers.py  tests.py
tests/old tests/: test_file_selection_methods.py
xapres/: ApRES_plot.py  __init__.py  load.py  utils.py
xapres_package/: ApRESDefs.py  ApRES_plot.py  MATLAB_vels.py  README.md  __init__.py  load copy.py  load.py  utils.py
(+85 files in other folders)
