[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*
    data
    data/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = xapres/_version.py


[metadata]
name = xapres
description = A package for processing data from the Autonomous phase-sensitive Radio-Echo Sounder (ApRES) using xarray. 
author = ldeo_glaciology
url = https://github.com/ldeo-glaciology/xapres
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 2 - Pre-Alpha 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # Dont change this one
    License :: OSI Approved :: MIT License 

## Add your email here
author_email = j.kingslake@columbia.edu


### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
    requests
    xarray
    gcsfs
    fsspec
    pandas
    tqdm
setup_requires= 
    setuptools_scm
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find:
